Fix rows not working on firefox

--- a/less/devarit.less
+++ b/less/devarit.less
@@ -217,7 +217,7 @@ nav {
 
   @media (min-width: @screen-sm-min) {
     .equal {
-      display: flex;
+      .lh-display(flex);
       align-items: center;
     }
   }
